--- a/css/main.css
+++ b/css/main.css
@@ -345,7 +345,7 @@ header .logo--blue {
   position: relative;
   max-width: 1600px;
   min-width: 480px;
-  background-image: url(../../images/hero.jpg);
+  background-image: url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: 1%;
   background-size: cover;
